fix: fix scroll change the width of sidebar add a gap between items

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -1,7 +1,7 @@
 .sidebar {
   font-size: 29.24px;
   line-height: 45.69px;
-  width: 326px;
+  width: 320px;
   height: 100vh;
   top: 20px;
   left: 296px;
@@ -12,12 +12,28 @@
   display: flex;
   flex-direction: column;
   transition: width 0.3s ease;
-  overflow-y: auto;
   overflow-x: hidden;
 
-  &.collapsed {
-    width: 80px;
-
+    &.collapsed {
+      width: 108px;
+      display: flex;
+      padding: 16px;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 28px;
+      flex: 1 0 0;
+      align-self: stretch;
+  
+    
+    .header {
+      width: 76px;
+      height: 68.71px;
+      padding: 6px 12px;
+      border-radius: 12px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+   
     .logo-container {
       border-radius: 12px;
       background: #0C1A46;
@@ -46,13 +62,10 @@
     .menu-icon {
       margin: 0 auto;
     }
-  
-    .header {
-      justify-content: center;
 
       .toggle {
         position: absolute;
-        left: 120px;
+        left: 150px;
         top: 39px;
         display: flex;
         width: 28px;
@@ -74,16 +87,22 @@
     font-style: normal;
     font-weight: 500;
     line-height: 25px;
-    padding-left: 12px;
-    padding-bottom: 16px;
+    padding: 0px 24px;
+    width: 99.97px;
+    height: 41.93px;
+    width: 294px;
+
     }
+
   .header {
-    background-color: #0C1A46;
+    width: 294px;
+    height: 68.71px;
+    padding: 6px 12px;
     border-radius: 12px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 6px 12px;
+    background-color: #0c1a46;
  
 
     .logo-container {
@@ -125,14 +144,13 @@
 
   .search {
     padding-top: 16px;
-
-
+    
     .search-container {
       display: flex;
       padding: 8px 12px;
       align-items: center;
       border-radius: 8px;
-      margin-bottom: 60px;
+      margin-bottom: 80px;
       background: rgba(239, 246, 255, 0.2);
       transition: all 0.3s ease;
 
@@ -161,6 +179,7 @@
       .cmd-icons {
         display: flex;
         gap: 8px;
+        padding: 2.5px;
 
         .icon {
           width: 18px;
@@ -173,6 +192,7 @@
     &.collapsed {
       .search-container {
         justify-content: center;
+        width:76px;
 
         input,
         .cmd-icons {
@@ -186,14 +206,38 @@
     list-style: none;
     padding: 0;
     margin: 0;
+    overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 16px; 
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background-color: rgba(255, 255, 255, 0.5); 
+  }
+
+  &::-webkit-scrollbar-track {
+    background-color: rgba(23, 37, 84, 0.8); 
+    border-radius: 16px; 
+  }
 
     .menu-item {
       display: flex;
+      padding: 8px 12px;
       align-items: center;
-      padding: 10px 20px;
+      gap: 12px;
+      flex: 1 0 0;
       cursor: pointer;
       transition: background 0.2s ease;
       border-radius: 8px;
+      margin-top: 6px;
+      margin-right: 12px;
+      margin-left: 12px;
 
       &:hover {
         background: rgba(239, 246, 255, 0.2);
